----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-08-16 Alexander M. Turek  <me@derrabus.de>
    * Documentation.html: Typos; added a note about the deprecated MySQL
      versions 4.1.0 and 4.1.1.

2004-09-01 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/auth/cookie.auth.lib.php: bug 939531: when people upgrade
      phpMyAdmin on the same directory, the previous cookie pma_cookie_username
      was used but produced an Undefined offset in blowfish.php, because
      on previous PMA versions it was not encoded the same way. Now this old
      cookie is not used. Users have to reenter their username (not a big 
      impact IMO)

2004-09-01 Michal ÄihaÅ  <michal@cihar.com>
    * libraries/export/sql.php: Fix empty BLOB export (bug #1020052).

2004-08-29 Marc Delisle  <lem9@users.sourceforge.net>
    * server_privileges.php: bug 1007870, illegal mix of collations
      for operation UNION

2004-08-28 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_structure.php, tbl_properties.inc.php,
      libraries/sqlparser.data.php, /database_interface.lib.php:
      support for VARBINARY and BINARY field types

2004-08-27 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_relation.php, libraries/display_tbl.lib.php: bug 1016997, 
      wrong db name generated in SHOW KEYS

2004-08-26 Marc Delisle  <lem9@users.sourceforge.net>
    * index.php, libraries/common.lib.php: bug 1006011: now we save
      the chosen connection collation into a cookie
    * lang/japanese: updated, thanks to Tadashi Jokagi (elf2000) 
    * lang/hebrew, turkish: bug 1016609: <br> tags

2004-08-25 Michal ÄihaÅ  <michal@cihar.com>
    * main.php: Don't show port after verbose name (bug #1013401).

2004-08-23 Michal ÄihaÅ  <michal@cihar.com>
    * scripts/create-release.sh: Support for snapshots outside sourceforge.
    * libraries/export/sql.php: Fix exporting of TIMESTAMP (bug #1013730).
